[package]
name = "fourthage-mud"
version = "0.1.0"
authors = ["Jay Valentine"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
fourthage-mud-macros = { path = "./fourthage-mud-macros" }
async-trait = "0.1.89"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v7"] }
